client_max_body_size 10m (default is 1m)

--- a/boot/ansible/templates/nginx.conf.j2
+++ b/boot/ansible/templates/nginx.conf.j2
@@ -15,6 +15,7 @@ server {
     }
 
     location / {
+        client_max_body_size 10m;
         include /etc/nginx/uwsgi_params;
         uwsgi_pass unix:{{ sock }};
     }
