Update Python & JavaScript requirements
Separate CSS for Svelte.

--- a/boot/templates/boot/svelte_page.html
+++ b/boot/templates/boot/svelte_page.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
+  <link rel='stylesheet' type="text/css" href="{% svelte_css 'main' %}">
 </head>
 
 <body>
   <div id="anchor"></div>
 
-  <script src="{% svelte_js %}"></script>
+  <script src="{% svelte_js 'main' %}"></script>
   {{ view.props|json_script:"app-data" }}
   <script>
     const props = JSON.parse(document.getElementById('app-data').textContent);
